# NeuroTranslate

./: .gitignore  README.md  neurotranslate.yml
FyzLocal/ABCD_NetMats/: extractABCD_ts.sh  transpose_ptseries.py  transpose_ptseries.sh  ts2netmats.py  ts2netmats.sh
FyzLocal/DualRegression_ABCD_CIFTI/pydr-main/: .gitignore  LICENSE  README.md  pyproject.toml
FyzLocal/DualRegression_ABCD_CIFTI/pydr-main/pydr/: dr.py  dr_helper.py
code/: 01a_ICA50toPFM50.py  01b_ICA50toPFM50.py  01d_ICA50toPFM50.sh  01f_ICA50toPFM50.sh  01g_ICA50toPFM50.py  01g_ICA50toPFM50.sh  01hungarian_ICA50toPFM50.py  01splineConvLOCALViewer_ICA50toPFM50.py  01splineConvViewer_ICA50toPFM50.py  01splineConvViewer_ICA50toPFM50.sh  01viewer_ICA50toPFM50.py  02_ICA50toGradients50.py  02a_ICA50toGradients50.py  02b_ICA50toGradients50.py  02b_ICA50toGradients50.sh  02hungarian_ICA50toGradients50.py  02hungarian_ICA50toGradients50.sh  02splineConvLOCALViewer_ICA50toGradients50.py  02viewer_ICA50toGradients50.py  03a_Gradients50toPFM50.py  03b_Gradients50toPFM50.sh  03c_Gradients50toPFM50.sh  03hungarian_Gradients50toPFM50.sh  03splineConvLOCALViewer_Gradients50toPFM50.py  03viewer_Gradients50toPFM50.py  04a_ICA15toPFM50.sh  04b_ICA15toPFM50.py  04c_ICA15toPFM50.py  04c_ICA15toPFM50.sh  04hungarian_ICA15toPFM50.sh  04splineConvLOCALViewer_ICA15toPFM50.py  04viewer_ICA15toPFM50.py  05a_ICA200toPFM50.sh  05b_ICA200toPFM50.py  05c_ICA200toPFM50.py  05c_ICA200toPFM50.sh  05splineConvLOCALViewer_ICA200toPFM50.py  05splineConvViewer_ICA200toPFM50.sh  05viewer_ICA200toPFM50.py  06b_PFM50toICA50.py  (+29 more)
(+230 files in other folders)
